--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
     "@oak/oak": "jsr:@oak/oak@^17.1.2",
     "@std/assert": "jsr:@std/assert@1",
     "@std/fmt": "jsr:@std/fmt@^1.0.3",
+    "@std/path": "jsr:@std/path@^1.0.7",
     "@vitejs/plugin-vue": "npm:@vitejs/plugin-vue@^5.1.4",
     "autoprefixer": "npm:autoprefixer@^10.4.20",
     "just-omit": "npm:just-omit@^2.2.0",
